fix(vector): materialise the LSM_VECTOR location map on first use, not on every open (#6722)
Opening a database walked every page of every LSM_VECTOR index and rebuilt the
in-memory location map, whether or not the session went on to search it. The cost
is one page parse plus one map insert per indexed vector, so it scales with the
corpus rather than with what the session does, it is paid again on every open, and
the page cache cannot amortise it because the work is parsing and map population
rather than I/O: ~1.4 s at 10M vectors, of which a cold open recovers only 8%,
against 53% for documents and 89% for a graph with a Graph Analytical View - both
of which open in single-digit milliseconds at that size. A process that opened the
database to write one document, or to read an unrelated type, paid all of it.

The graph is deferred to the first search two lines below the call site that did
this. The location map now gets the same treatment: loadVectorsAfterSchemaLoad()
records that there are pages worth reading and returns, and the first caller that
needs a location materialises them, once, under a dedicated lock that is not the
index-wide write lock. Open becomes constant-time in the number of indexed vectors,
and a session that never touches a vector index never parses one.

The deferral is structural rather than a convention: the field is private and
reachable only through an accessor that materialises first, and the few sites that
read it raw say why. Two of those matter to behaviour:

- needsGraphBuild(), which runs on every flush() including the close of a session
  that never touched the index, answers "does this hold vectors" from page counters
  instead of the location count, so the deferral is not handed back at close. The
  branches past that decision do materialise: both are choosing between building the
  whole graph now and recording a deferral, both need the real live count, and
  getting it wrong would send a large index down the synchronous-build arm